k8s/api-gateway/hostnames/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: api-gateway
  namespace: default
spec:
  gatewayClassName: consul
  listeners:
  - name: http
    hostname: "*.example.com"
    protocol: HTTP
    port: 80
