k8s/api-gateway/hostnames/routes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: api-gateway
  namespace: default
spec:
  gatewayClassName: consul-api-gateway
  listeners:
  - name: http
    hostname: "*.example.com"
    protocol: HTTP
    port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: frontend-route-default
  namespace: default
spec:
  hostnames:
    - frontend.example.com
  parentRefs:
    - name: api-gateway
  rules:  
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - name: frontend
        port: 8080
    - matches:
      - path:
          type: PathPrefix
          value: /backend
      backendRefs:
      - name: backend
        port: 8080
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: backend-route-default
  namespace: default
spec:
  hostnames:
    - backend.example.com
  parentRefs:
    - name: api-gateway
  rules: 
    - backendRefs:
      - kind: Service
        name: backend
        port: 8080
